--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>유쟈버스</title>
-    <!-- 부트스트랩 CSS 링크 -->
+
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -24,19 +24,19 @@
         </div>
         <nav>
           <ul class="nav justify-content-center">
-            <li class="nav-item">
-              <a class="nav-link active" href="index.html">홈으로</a>
+            <li>
+              <a class="nav-link" href="index.html">홈으로</a>
             </li>
-            <li class="nav-item">
+            <li>
               <a class="nav-link" href="about.html">만화종류</a>
             </li>
-            <li class="nav-item">
+            <li>
               <a class="nav-link" href="ppt.html">만화주제가</a>
             </li>
-            <li class="nav-item">
+            <li>
               <a class="nav-link" href="student.html">유쟈의 추천 만화</a>
             </li>
-            <li class="nav-item">
+            <li>
               <a class="nav-link" href="js.html">유쟈는 누구인가</a>
             </li>
           </ul>
@@ -48,7 +48,7 @@
         <h1 class="display-4">내가 알고있는 추억의 만화는 무엇이 있을까?</h1>
         <h2 class="lead">우리 같이 추억여행 해보아요!</h2>
         <p>*방영채널과 상관없이 나열했습니다*</p>
-        <img src="./img/showcase.gif" alt="이미지_설명" class="img-fluid" />
+        <img src="./img/showcase.gif" class="img-fluid" />
       </div>
     </section>
 
@@ -72,7 +72,7 @@
     <footer class="text-center py-3">
       <p>Copyright &copy; 2023, 중부대학교 정보보호학과 한유정</p>
     </footer>
-    <!-- 부트스트랩 JS 링크 -->
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6"></script>
   </body>
